--- a/homeoptik/templates/oscar/promotions/home.html
+++ b/homeoptik/templates/oscar/promotions/home.html
@@ -85,6 +85,77 @@
     </div>
     <!-- /Intro Block
     ============================================ -->
+    <!-- Content Block
+         ============================================ -->
+    <div class="content-block" >
 
+        <!-- Container -->
+        <div class="container cont-md">
+
+            <!-- Section Title -->
+            <div class="section-title line-pcolor">
+                <h2>бренды</h2>
+                <p>У нас вы можете купить оригинальную продукцию известных брендов.</p>
+            </div>
+            <!-- /Section Title -->
+
+            <!-- Slider Wrapper -->
+            <div class="brand-slider">
+
+                <!-- BxSlider -->
+                <div class="bxslider" data-call="bxslider" data-options="{pager:false, slideMargin:20}" data-breaks="[{screen:0, slides:2}, {screen:460, slides:3}, {screen:768, slides:5}]">
+
+                    <!-- Slide -->
+                    <div class="slide">
+                        <img class="img-main" src="{% static "images/company1.jpg" %}" alt=""/>
+                    </div>
+                    <!-- /Slide -->
+
+                    <!-- Slide -->
+                    <div class="slide">
+                        <img class="img-main" src="{% static "images/company1.jpg" %}" alt=""/>
+                    </div>
+                    <!-- /Slide -->
+
+                    <!-- Slide -->
+                    <div class="slide">
+                        <img class="img-main" src="{% static "images/company1.jpg" %}" alt=""/>
+                    </div>
+                    <!-- /Slide -->
+
+                    <!-- Slide -->
+                    <div class="slide">
+                        <img class="img-main" src="{% static "images/company1.jpg" %}" alt=""/>
+                    </div>
+                    <!-- /Slide -->
+
+                    <!-- Slide -->
+                    <div class="slide">
+                        <img class="img-main" src="{% static "images/company1.jpg" %}" alt=""/>
+                    </div>
+                    <!-- /Slide -->
+
+                    <!-- Slide -->
+                    <div class="slide">
+                        <img class="img-main" src="{% static "images/company1.jpg" %}" alt=""/>
+                    </div>
+                    <!-- /Slide -->
+
+                    <!-- Slide -->
+                    <div class="slide">
+                        <img class="img-main" src="{% static "images/company1.jpg" %}d" alt=""/>
+                    </div>
+                    <!-- /Slide -->
+                </div>
+                <!-- /BxSlider -->
+
+            </div>
+            <!-- Slider Wrapper -->
+        </div>
+        <!-- /Container -->
+
+    </div>
+    <!-- Content Block
+    ============================================ -->
 
 {% endblock %}
