--- a/homeoptik/templates/oscar/partials/brand.html
+++ b/homeoptik/templates/oscar/partials/brand.html
@@ -8,7 +8,7 @@
         <!-- v-centered -->
         <div class="vcenter-this">
             <a href="{{ homepage_url }}">
-                <img src="{% static "images/logo1.jpg" %}" alt="{{ shop_name }}">
+                <img src="{% static "images/logo.png" %}" alt="{{ shop_name }}">
             </a>
         </div>
         <!-- v-centered -->
