--- a/homeoptik/templates/oscar/partials/nav_primary.html
+++ b/homeoptik/templates/oscar/partials/nav_primary.html
@@ -63,7 +63,8 @@
                                     {% endfor %}
                                     {% endfor %}
                                 {% endif %}
-
+                            
+                                {% if offers %}
                                 <!-- col -->
                                 <div class="col-md-3">
                                     <h5>Скидки и акции</h5>
@@ -77,6 +78,7 @@
                                     </ul>
                                 </div>
                                 <!-- /col -->
+                                {% endif %}
                             </div>
                             <!-- /Row -->
                         </div>
