--- a/homeoptik/templates/oscar/partials/form_field.html
+++ b/homeoptik/templates/oscar/partials/form_field.html
@@ -11,7 +11,7 @@
     {% annotate_form_field field %}
 
     {% block control_group %}
-        <div class="form-group {% if field.errors %}has-error{% endif %}">
+{#        <div class="{% if field.errors %}has-error{% endif %}">#}
 
             {% block label %}
                 {% if not nolabel and field.widget_type != 'CheckboxInput' %}
@@ -30,15 +30,15 @@
             {% endblock %}
 
             {% block controls %}
-                <div class="{% if style|default:"stacked" != 'stacked' %}col-sm-7{% endif %}">
+{#                <div class="{% if style|default:"stacked" != 'stacked' %}col-sm-7{% endif %}">#}
                     {% block widget %}
                         {% if field.widget_type == 'CheckboxInput' %}
                             <label for="{{ field.auto_id }}" class="checkbox {% if field.field.required %}required{% endif %}">
                                 {{ field.label|safe }}
-                                {% render_field field class+="form-control" %}
+                                {% render_field field  %}
                             </label>
                         {% else %}
-                            {% render_field field class+="form-control" %}
+                            {% render_field field %}
                         {% endif %}
                     {% endblock %}
 
@@ -51,8 +51,8 @@
                             </span>
                         {% endif %}
                     {% endblock %}
-                </div>
+{#                </div>#}
             {% endblock %}
-        </div>
+{#        </div>#}
     {% endblock %}
 {% endif %}
