--- a/homeoptik/templates/oscar/catalogue/partials/product.html
+++ b/homeoptik/templates/oscar/catalogue/partials/product.html
@@ -18,7 +18,9 @@
         {% endblock %}
 
         {% if product.date_created|days_since <= 7 %}
-            <span class="label label-new">новинка         {{ product.date_created|days_since }}</span>
+            <span class="label label-new">новинка</span>
+        {% elif product.is_popular %}
+            <span class="label label-hot">популярный</span>
         {% endif %}
 
 
