--- a/homeoptik/templates/oscar/partials/nav_primary.html
+++ b/homeoptik/templates/oscar/partials/nav_primary.html
@@ -42,42 +42,47 @@
                                 </div>
                                 <!-- /col -->
 
-                                {% category_tree depth=2 as tree_categories %}
+                                {% category_tree depth=1 as tree_categories %}
                                 {% if tree_categories %}
-                                    {% for tree_category, info in tree_categories %}
-                                        {% if info.has_children %}
-                                            <!-- col -->
-                                            <div class="col-md-3">
-                                            <h5>{{ tree_category.name }}</h5>
-                                            <ul class="links">
-                                        {% else %}
-                                            <li {% if tree_category.get_absolute_url == request.get_full_path %}class="active"{% endif %}>
-                                                <a href="{{ tree_category.get_absolute_url }}">{{ tree_category.name }}</a>
-                                            </li>
-                                        {% endif %}
-
-                                    {% for close in info.num_to_close %}
+                                    <!-- col -->
+                                    <div class="col-md-3">
+                                        <h5>По категориям</h5>
+                                        <ul class="links">
+                                            {% for tree_category, info in tree_categories %}
+                                                <li {% if tree_category.get_absolute_url == request.get_full_path %}class="active"{% endif %}>
+                                                    <a href="{{ tree_category.get_absolute_url }}">{{ tree_category.name }}</a>
+                                                </li>
+                                            {% endfor %}
                                         </ul>
-                                        </div>
-                                        <!-- /col -->
-                                    {% endfor %}
-                                    {% endfor %}
+                                    </div>
+                                    <!-- /col -->
                                 {% endif %}
-                            
-                                {% if offers %}
+
                                 <!-- col -->
                                 <div class="col-md-3">
-                                    <h5>Скидки и акции</h5>
+                                    <h5>По брендам</h5>
                                     <ul class="links">
-                                        {% for offer in offers %}
-                                            {% url 'offer:detail' slug=offer.slug  as offer_url%}
-                                            <li {% if offer_url == request.get_full_path %}class="active"{% endif %}>
-                                                <a href="{{ offer_url }}">{{ offer.name }}</a>
-                                            </li>
-                                        {% endfor %}
+{#                                        <li {% if tree_category.get_absolute_url == request.get_full_path %}class="active"{% endif %}>#}
+{#                                            <a href="{{ tree_category.get_absolute_url }}">{{ tree_category.name }}</a>#}
+{#                                        </li>#}
                                     </ul>
                                 </div>
                                 <!-- /col -->
+
+                                {% if offers %}
+                                    <!-- col -->
+                                    <div class="col-md-3">
+                                        <h5>Скидки и акции</h5>
+                                        <ul class="links">
+                                            {% for offer in offers %}
+                                                {% url 'offer:detail' slug=offer.slug  as offer_url%}
+                                                <li {% if offer_url == request.get_full_path %}class="active"{% endif %}>
+                                                    <a href="{{ offer_url }}">{{ offer.name }}</a>
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
+                                    </div>
+                                    <!-- /col -->
                                 {% endif %}
                             </div>
                             <!-- /Row -->
