--- a/homeoptik/templates/oscar/promotions/home.html
+++ b/homeoptik/templates/oscar/promotions/home.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 {% load staticfiles %}
 {% load product_tags %}
+{% load promotion_tags %}
 
 {##}
 {#{% block navigation %}#}
@@ -21,59 +22,10 @@
                 <!-- BxSlider -->
                 <div class="bxslider" data-call="bxslider" data-options="{pager:false, mode:'fade'}">
 
-                    <!-- Slide -->
-                    <div class="slide">
-                        <img class="img-main" src="{% static "images/slides/slide1.jpg" %}" alt=""/><!-- slider image + background -->
-                        <!-- Text -->
-                        <div class="text">
-                            <div class="vcenter">
-                                <div class="vcenter-this text-block">
-                                    <h5 class="bx-layer" data-anim="bounceInLeft" data-dur="1000" data-delay="700">from 5th March - 26 March</h5>
-                                    <h1 class="bx-layer" data-anim="bounceInDown" data-dur="1000" data-delay="100">fresh from the runway</h1><br/>
-                                    <p class="bx-layer" data-anim="bounceInRight" data-dur="1000" data-delay="500">Helena is a freelance fashion house specialisings in print designs and fabrics.</p>
-                                    <a class="btn btn-base bx-layer" data-anim="bounceInUp" data-dur="1000" data-delay="1000">shop now</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /Text -->
-                    </div>
-                    <!-- /Slide -->
-
-                    <!-- Slide -->
-                    <div class="slide">
-                        <img class="img-main" src="{% static "images/slides/slide2.jpg" %}" alt=""/><!-- slider image + background -->
-                        <!-- Text -->
-                        <div class="text">
-                            <div class="vcenter">
-                                <div class="vcenter-this text-block">
-                                    <h5 class="bx-layer" data-anim="bounceInLeft" data-dur="1000" data-delay="700">from 5th March - 26 March</h5>
-                                    <h1 class="bx-layer" data-anim="bounceInDown" data-dur="1000" data-delay="100">designer clothes only</h1><br/>
-                                    <p class="bx-layer" data-anim="bounceInRight" data-dur="1000" data-delay="500">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur veli..</p>
-                                    <a class="btn btn-white bx-layer" data-anim="bounceInUp" data-dur="1000" data-delay="1000">shop now</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /Text -->
-                    </div>
-                    <!-- /Slide -->
-
-                    <!-- Slide -->
-                    <div class="slide">
-                        <img class="img-main" src="{% static "images/slides/slide3.jpg" %}" alt=""/><!-- slider image + background -->
-                        <!-- Text -->
-                        <div class="text">
-                            <div class="vcenter">
-                                <div class="vcenter-this text-block">
-                                    <h5 class="bx-layer" data-anim="bounceInLeft" data-dur="1000" data-delay="700">from 5th March - 26 March</h5>
-                                    <h1 class="bx-layer" data-anim="bounceInDown" data-dur="1000" data-delay="100">hot summer collection</h1><br/>
-                                    <p class="bx-layer" data-anim="bounceInRight" data-dur="1000" data-delay="500">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur veli..</p>
-                                    <a class="btn btn-primary bx-layer" data-anim="bounceInUp" data-dur="1000" data-delay="1000">shop now</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /Text -->
-                    </div>
-                    <!-- /Slide -->
+                    {# Render promotions #}
+                    {% for promotion in promotions_home_slides %}
+                        {% render_promotion promotion %}
+                    {% endfor %}
 
                 </div>
                 <!-- /BxSlider -->
@@ -107,67 +59,67 @@
                 <!-- /Nav Tabs -->
 
                 {% with nolabel=1 %}
-                <!-- Tab panes -->
-                <div class="tab-content tab-no-borders">
-                    {% if popular_products %}
-                        <!-- Tab Popular -->
-                        <div class="tab-pane active" id="tab-popular">
+                    <!-- Tab panes -->
+                    <div class="tab-content tab-no-borders">
+                        {% if popular_products %}
+                            <!-- Tab Popular -->
+                            <div class="tab-pane active" id="tab-popular">
 
-                            <!-- Row -->
-                            <div class="row">
-                                {% for product in popular_products %}
-                                    <!-- Col -->
-                                    <div class="col-sm-6 col-md-3">
-                                        {% render_product product%}
-                                    </div>
-                                    <!-- /Col -->
-                                {% endfor %}
+                                <!-- Row -->
+                                <div class="row">
+                                    {% for product in popular_products %}
+                                        <!-- Col -->
+                                        <div class="col-sm-6 col-md-3">
+                                            {% render_product product%}
+                                        </div>
+                                        <!-- /Col -->
+                                    {% endfor %}
+                                </div>
+                                <!-- /Row -->
+
                             </div>
-                            <!-- /Row -->
+                            <!-- /Tab Popular -->
+                        {% endif %}
+                        {% if latest_products %}
+                            <!-- Tab Popular -->
+                            <div class="tab-pane" id="tab-latest">
 
-                        </div>
-                        <!-- /Tab Popular -->
-                    {% endif %}
-                    {% if latest_products %}
-                        <!-- Tab Popular -->
-                        <div class="tab-pane" id="tab-latest">
+                                <!-- Row -->
+                                <div class="row">
+                                    {% for product in latest_products %}
+                                        <!-- Col -->
+                                        <div class="col-sm-6 col-md-3">
+                                            {% render_product product %}
+                                        </div>
+                                        <!-- /Col -->
+                                    {% endfor %}
+                                </div>
+                                <!-- /Row -->
 
-                            <!-- Row -->
-                            <div class="row">
-                                {% for product in latest_products %}
-                                    <!-- Col -->
-                                    <div class="col-sm-6 col-md-3">
-                                        {% render_product product %}
-                                    </div>
-                                    <!-- /Col -->
-                                {% endfor %}
                             </div>
-                            <!-- /Row -->
+                            <!-- /Tab Popular -->
+                        {% endif %}
+                        {% if newest_products %}
+                            <!-- Tab Popular -->
+                            <div class="tab-pane" id="tab-newest">
 
-                        </div>
-                        <!-- /Tab Popular -->
-                    {% endif %}
-                    {% if newest_products %}
-                        <!-- Tab Popular -->
-                        <div class="tab-pane" id="tab-newest">
+                                <!-- Row -->
+                                <div class="row">
+                                    {% for product in newest_products %}
+                                        <!-- Col -->
+                                        <div class="col-sm-6 col-md-3">
+                                            {% render_product product %}
+                                        </div>
+                                        <!-- /Col -->
+                                    {% endfor %}
+                                </div>
+                                <!-- /Row -->
 
-                            <!-- Row -->
-                            <div class="row">
-                                {% for product in newest_products %}
-                                    <!-- Col -->
-                                    <div class="col-sm-6 col-md-3">
-                                        {% render_product product %}
-                                    </div>
-                                    <!-- /Col -->
-                                {% endfor %}
                             </div>
-                            <!-- /Row -->
-
-                        </div>
-                        <!-- /Tab Popular -->
-                    {% endif %}
-                </div>
-                <!-- /Tab panes -->
+                            <!-- /Tab Popular -->
+                        {% endif %}
+                    </div>
+                    <!-- /Tab panes -->
                 {% endwith %}
 
             </div>
