--- a/homeoptik/templates/oscar/base.html
+++ b/homeoptik/templates/oscar/base.html
@@ -52,7 +52,7 @@
     {% endblock %}
 </head>
 
-<body id="{% block body_id %}default{% endblock %}" style="background:white" class="{% block body_class %}preload ukb{% endblock %}">
+<body id="{% block body_id %}default{% endblock %}" class="{% block body_class %}tile-1-bg preload ukb{% endblock %}">
 
     {# Main content goes in this 'layout' block #}
     {% block layout %}{% endblock %}
